fix: black space on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,4 +59,6 @@
   }
 }
 
-
+body {
+  overflow-x: hidden;
+}
